# crewai-playground

./: DONE.md  IMPLEMENTATION_GUIDE.md  QUICKSTART.md  README.md  config.yaml  exceptions.py  main.py  pyproject.toml  run.py  run_crew.sh  test_api.py
app/: main.py  utils.py
app/agents/: README.md  __init__.py  crew_agents.py  langgraph_agents.py
app/models/: schemas.py
app/routes/: health.py  llm.py
app/services/: ollama_client.py
